# phraser

./: LICENSE  README.md  diceware-phrase.cabal  phraser.cabal
app/: Main.hs
src/: DicewarePhrase.hs
src/DicewarePhrase/: WordList.hs
src/Phraser/: OptionsParser.hs  Phrase.hs  Random.hs  WordList.hs
